Wed Mar 22 11:37:24 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: added HAVE_SYS_TYPES_H. Cleaned up the loading
           of sys/types.h which john added earlier. Specifically, we always
           have it and it's missing some typedefs used by this code.            

Tue Mar 21 18:42:23 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: PC: NO_PASSWORD defined and files opened in binary mode.
	* func-proto.h: added new prototype for notify programs when the 
           ccache changes, and moved krb5_get_default_realm from los-proto.h.
        * los-proto.h: moved krb5_get_default_realm into func-proto.h.

Sun Mar 19 12:51:59 1995  John Gilmore  (gnu at toad.com)

	* base-defs.h:  Fix comment that referred to STDARG_PROTOTYPES.

Fri Mar 17 19:12:13 1995  John Gilmore  (gnu at toad.com)

	* k5-config.h:  Move <sys/types.h> handling from ../krb5.h to
	here, because we need <sys/types.h> or the u_* types to be defined
	before we include the Unix socket include files a little later in
	k5-config.h.  We actually add this code twice, once in the MSDOS
	section and once in the Unix/Mac section.
	(NEED_SOCKETS):  Also include <net/if.h>, for localaddr.c.
	* Makefile.in (clean-mac):  Add.

Tue Mar 14 16:50:54 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Delete definition for KRB5ROOT and KRB5_INCDIR,
		since those are defined in pre/config.in.

Thu Mar 16 20:58:22 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Replace nonstandard CHECK_STDARG with
	AC_CHECK_HEADERS.  Also check for header file macsock.h, which
	is a dummy test -- it's false on Unix and PC's, but on the Mac
	we hand-configure it to be true, to indicate that we want Mac
	socket support rather than Unix socket support.
	* base-defs.h, k5-config.h:  Use HAVE_STDARG_H, not STDARG_PROTOTYPES.
	* k5-config.h (NEED_SOCKETS):  Add new section which brings in
	socket include files for the appropriate compilation environment
	(Mac or Unix; Windows already did this).