@@ -31,6 +31,7 @@
 #define ADM5_VERSIZE		strlen(ADM5_VERSTR)
 /* This used to be kerberos_master */
 #define ADM5_PORTNAME		"kerberos-adm"
+#define ADM5_DEFAULT_PORT	752
 #define ADM5_CPW_VERSION	"V5CPWS01"
 #define ADM5_ADM_VERSION	"V5ADMS01"
 #define CPWNAME			"kadmin"
